--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
-name = "server"
+name = "loglumen-server"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+actix-web = "4"
+actix-cors = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+chrono = { version = "0.4", features = ["serde"] }
+parking_lot = "0.12"
