--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
 parking_lot = "0.12"
+percent-encoding = "2"
